# end-to-end-machine-learning-example

./: .gitignore  pyproject.toml
src/housing_price_predictions/: data.py  entrypoint.py  logger.py
src/housing_price_predictions/cli/: __init__.py  check.py  clean.py  download.py
src/housing_price_predictions/data/: analysis.py  files.py  training.py  visualization.py
