[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "housing-price-predictions"
dynamic = ["version"]
description = 'Hands-On Machine Learning with Scikit-Learn, Keras, & Tensorflow: Chapter 2 example'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "asungy", email = "62207329+asungy@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "colorama",
  "numpy",
  "pandas",
  "requests",
  "scikit-learn",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "black",
  "helix-jupyter-thing",
  "jupyter",
  "matplotlib",
  "pyflakes",
  "python-lsp-server",
]

[project.scripts]
hpp = "housing_price_predictions.entrypoint:main"

[tool.hatch.version]
path = "src/housing_price_predictions/__about__.py"
